begin state implementation for sidebar selections

--- a/app/styles/bubblestyle.module.css
+++ b/app/styles/bubblestyle.module.css
@@ -7,7 +7,7 @@
 
 .bubbleBody {
     @apply
-    flex flex-col flex-grow w-60 mx-10 -my-8 h-72 items-center justify-center rounded-t-xl
+    flex flex-col flex-grow w-60 mx-10 -my-8 h-72 items-center justify-center rounded-t-xl  transform transition-all duration-300 ease-linear
 }
 
 .bubble-big { 
