--- a/app/styles/bubblestyle.module.css
+++ b/app/styles/bubblestyle.module.css
@@ -20,6 +20,6 @@
 }
 
 .addToCart {@apply
-    relative flex w-66 h-12 items-center justify-center -bottom-3 text-gray-600 bg-pastel-coral rounded-b-xl  shadow-gray-600 shadow-lg text-xl font-bold hover:bg-pastel-yellow
+    relative flex w-66 h-12 select-none items-center justify-center -bottom-3 text-gray-600 bg-pastel-coral rounded-b-xl  shadow-gray-600 shadow-lg text-xl font-bold hover:bg-pastel-yellow
     font-sans-fira
 }
