--- a/app/styles/home.module.css
+++ b/app/styles/home.module.css
@@ -1,9 +1,9 @@
 .sidebar {
-    @apply fixed flex flex-col w-24 h-screen left-0 justify-center items-center text-center font-main-display 
+    @apply absolute flex flex-col w-24 h-screen top-16 -left-8 justify-start items-start text-center font-main-display 
 }
 
 .sidebarItem {
-    @apply flex items-center text-center justify-center text-black font-texgyre-adventor font-semibold mx-auto cursor-pointer
+    @apply flex items-center text-center justify-center mb-6 text-black font-texgyre-adventor font-semibold mx-auto cursor-pointer
  }
 
 .title {@apply
