--- a/app/styles/bubblestyle.module.css
+++ b/app/styles/bubblestyle.module.css
@@ -7,7 +7,7 @@
 
 .bubbleBody {
     @apply
-    relative flex flex-col flex-grow lg:w-66 w-44 mx-10 -my-8 h-[20rem]  rounded-t-xl  transform transition-all duration-300 ease-linear
+    relative flex flex-col flex-grow lg:w-60 w-44 mx-4 -my-8 h-[20rem] rounded-t-xl justify-center items-center transform transition-all duration-300 ease-linear
 }
 
 .bubble-big { 
@@ -20,6 +20,6 @@
 }
 
 .addToCart {@apply
-    relative flex lg:w-66 w-48 h-12 select-none items-center justify-center bottom-6 lg:-bottom-3 text-gray-600 bg-pastel-coral rounded-b-xl  shadow-gray-600 shadow-lg text-xl font-bold hover:bg-pastel-yellow
+    relative flex lg:w-60 w-48 h-12 select-none items-center justify-center bottom-6 lg:-bottom-3 text-gray-600 bg-pastel-coral rounded-b-xl  shadow-gray-600 shadow-lg text-xl font-bold hover:bg-pastel-yellow
     font-sans-fira
 }
