Clean up css in complete screen. Move waves.svg into app folder

--- a/app/styles/home.module.css
+++ b/app/styles/home.module.css
@@ -20,7 +20,7 @@
 }
 
 .waves { 
-    background-image: url('../../public/waves.svg');
+    background-image: url('../waves.svg');
 }
 
 .userform { 
