--- a/app/globals.css
+++ b/app/globals.css
@@ -28,7 +28,7 @@ body {
 
 @layer base {
   html {
-    @apply fixed flex w-screen h-screen items-center justify-center bg-[url('../public/waves.svg')] bg-cover
+    @apply fixed flex w-screen h-screen items-center justify-center bg-cover bg-[url('waves.svg')]
   }
   @font-face {
     font-family: Adventor;
