Update form validation and error handling
Refactored UserForm component to validate input fields in real time and show error messages accordingly using the FormValidityContext. Made changes to the CSS to display these errors neatly to the user. Updated the PaymentButton to consider the validation state before proceeding. Also, moved the waves.svg into the app folder for cleaner project structure.

--- a/app/styles/userformStyles.module.css
+++ b/app/styles/userformStyles.module.css
@@ -1,3 +1,11 @@
 .userform { 
-  @apply bg-white border border-gray-300 rounded-lg shadow-md p-4;
+  @apply bg-white border border-gray-300 rounded-lg shadow-md p-4 my-2 text-black;
+}
+
+.inputError {
+  @apply bg-red-700
+}
+
+.errorText {
+  @apply text-red-600
 }
