--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -30,7 +30,7 @@ body {
 
 @layer base {
   html {
-    @apply fixed flex w-screen h-screen items-center justify-center bg-cover bg-[url('waves.svg')]
+    @apply flex w-screen h-screen items-center justify-center bg-cover bg-[url('waves.svg')]
   }
 }
 
